--- a/native/native_cssmenus.css
+++ b/native/native_cssmenus.css
@@ -1,7 +1,7 @@
-/* $Header: /cvsroot/bitweaver/_bit_styles/native/native_cssmenus.css,v 1.1.1.1.2.2 2005/08/25 17:51:53 squareing Exp $ */
+/* $Header: /cvsroot/bitweaver/_bit_styles/native/native_cssmenus.css,v 1.1.1.1.2.3 2005/09/18 08:55:52 squareing Exp $ */
 /**
  * @author   xing <xing@synapse.plus.com>
- * @version  $Revision: 1.1.1.1.2.2 $
+ * @version  $Revision: 1.1.1.1.2.3 $
  * @theme    native
  * @license  LGPL
  */
@@ -24,9 +24,9 @@
 			/* css driven dropdown menus - horizontal */
 .hor			{line-height:1.6em;}
 .hor ul			{line-height:2em;}
-.hor,.hor a,.hor li,.hor ul	{z-index:100000;}
+.hor,.hor a,.hor li ul	{z-index:100000;}
 .hor .icon		{position:absolute; left:28px; top:2px; vertical-align:middle; margin-left:-26px;}
-.hor,.hor ul	{padding:0; margin:0; list-style:none; z-index:1000000;}
+.hor,.hor ul	{padding:0; margin:0; list-style:none;}
 .hor a			{padding:0 5px; color:#cb5;}
 .hor li li a	{color:#900; padding:0 5px;}
 .hor li:hover a	{color:#900;}
@@ -46,11 +46,11 @@
 #nav li ul			{background:#eee url( images/nav_ul.gif ) repeat-y top left;}
 #nav li:hover,#nav li.ieHover	{background:#ddd; border-color:#999;}
 			/* css driven dropdown menus - vertical */
-.ver,.ver a,.ver li,.ver ul	{z-index:100000;}
+.ver,.ver a,.ver li ul	{z-index:100000;}
 .ver .icon		{margin-left:-26px; padding-right:8px; vertical-align:middle;}
 .ver a			{color:#000; padding:0 5px; white-space:nowrap;}
 .ver a.head		{background-image:url( images/arrow.gif ); background-repeat:no-repeat; background-position:right;}
-.ver, .ver ul	{padding:0; margin:0; list-style:none; float:left; width:166px; z-index:1000000;}
+.ver, .ver ul	{padding:0; margin:0; list-style:none; float:left; width:166px;}
 .ver li			{position:relative; width:166px;}
 .ver li:hover,.ver li.ieHover	{background:#bec7d3;}
 .ver li li		{position:relative; float:left; width:166px;}
